@@ -1,1 +1,7 @@
 # Chess
+
+## Execution
+
+```bash 
+> /usr/bin/env /Users/raphaele/Library/Java/JavaVirtualMachines/openjdk-18.0.1/Contents/Home/bin/java --enable-preview -XX:+ShowCodeDetailsInExceptionMessages -cp "/Users/raphaele/Library/Application Support/Code/User/workspaceStorage/34b3b982d7e8d8c9e459719c57992e22/redhat.java/jdt_ws/Chess_f03afe6/bin" Main
+```
